--- a/data/themes/default.toml
+++ b/data/themes/default.toml
@@ -1,21 +1,20 @@
 # Theme metadata
-name = "1950s"
+name = "Default"
 
 # Is theme light or dark?
 light = true
 
 # Primary
-primary = "#EF525B"
-primary_light = "#FF6771"
-primary_dark = "#DA2536"
+primary = "#2962ff"
+primary_light = "#768fff"
+primary_dark = "#0039cb"
 
 # Menu
-menu_primary = "#24C2CB"
-menu_text = "#fff"
-menu_text_active = "#00828B"
-menu_title = "#fff"
+menu_primary = "#fff"
+menu_text = "#34495e"
+menu_text_active = "#2962ff"
+menu_title = "#2b2b2b"
 
-# Backgrounds
-background = "#EAE7D6"
-home_section_odd = "#EAE7D6"
-home_section_even = "#EAE7D6"
+# Home sections
+home_section_odd = "rgb(255, 255, 255)"
+home_section_even = "rgb(247, 247, 247)"
