--- a/data/themes/original.toml
+++ b/data/themes/original.toml
@@ -5,12 +5,12 @@ name = "Default"
 light = true
 
 # Primary
-primary = "#2962ff"
+primary = "#5e94e5"
 primary_light = "#768fff"
 primary_dark = "#0039cb"
 
 # Menu
-menu_primary = "#fff"
+menu_primary = "#e6e7ed"
 menu_text = "#34495e"
 menu_text_active = "#2962ff"
 menu_title = "#2b2b2b"
