--- a/data/themes/default.toml
+++ b/data/themes/default.toml
@@ -10,7 +10,7 @@ primary_light = "#768fff"
 primary_dark = "#0039cb"
 
 # Menu
-menu_primary = "#e6e7ed"
+menu_primary = "#fff"
 menu_text = "#34495e"
 menu_text_active = "#2962ff"
 menu_title = "#2b2b2b"
