--- a/data/fonts/default.toml
+++ b/data/fonts/default.toml
@@ -2,10 +2,10 @@
 name = "Default"
 
 # Optional Google font URL
-google_fonts = "Montserrat:400,700|Roboto:400,400italic,700|Roboto+Mono"
+google_fonts = "Lora:400,700|Noto Serif:400,400italic,700|Roboto+Mono"
 
 # Font families
-heading_font = "Montserrat"
+heading_font = "Lora"
 body_font = "Noto Serif"
 nav_font = "Lora"
 mono_font = "Roboto Mono"
