--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -11,7 +11,7 @@
 [ru]
   languageCode = "ru"
   contentDir = "content/ru"
-  title = "Балдина Екатерина"
+  title = ""
 #  [zh.params]
 #    description = "Site description in Chinese..."
 #  [[zh.menu.main]]
