--- a/config/_default/menus.ru.toml
+++ b/config/_default/menus.ru.toml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Домашняя страницы"
+  name = "Домашняя страница"
   url = "#about"
   weight = 10
 
