--- a/config/_default/menus.ru.toml
+++ b/config/_default/menus.ru.toml
@@ -37,5 +37,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
     name = "Резюме"
-    url = "CV_eng.pdf"
+    url = "static/files/CV_eng.pdf"
     weight = 70
