--- a/config/_default/menus.ru.toml
+++ b/config/_default/menus.ru.toml
@@ -13,10 +13,10 @@
   url = "#publications"
   weight = 20
 
-#[[main]]
-#  name = "Projects"
-# url = "#projects"
-#  weight = 30
+[[main]]
+  name = "Code"
+  url = "https://github.com/katyalex"
+  weight = 30
 
 #[[main]]
 #  name = "Publications"
