--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,10 @@
 # url = "#featured"
 #  weight = 40
 
-#[[main]]
-#  name = "Tutorials"
-#  url = "/tutorial/"
-#  weight = 50
+[[main]]
+  name = "Katya's studybook"
+  url = "https://bookdown.org/katebaldina/_katya_book/"
+  weight = 50
 
 #[[main]]
 #  name = "Contact"
