--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,7 +25,7 @@
 
 [[main]]
   name = "Katya's studybook"
-  url = "https://bookdown.org/katebaldina/_katya_book2/"
+  url = "https://katyalex.github.io/katya_book/"
   weight = 50
 
 #[[main]]
