--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -3,9 +3,9 @@
 #   Refer to https://sourcethemes.com/academic/docs/language/
 
 # Configure the English version of the site.
-[en]
-  languageCode = "en-us"
-  contentDir = "content/en"
+#[en]
+#  languageCode = "en-us"
+#  contentDir = "content/en"
 #[[en.menu.main]]
 #    name = "CV"
 #    url = "static/files/en/CV_eng.pdf"
