--- a/netlify.toml
+++ b/netlify.toml
@@ -1,29 +1,26 @@
-# Production context:
-# All deploys from the main repository branch
-# will inherit these settings.
-[context.production]
-  command = "make production"
+[build]
+  command = "hugo --gc --minify -b $URL"
+  publish = "public"
+
+[build.environment]
+  HUGO_VERSION = "0.68.3"
+  HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-    ACCESS_TOKEN = "super secret"
+  HUGO_ENV = "production"
 
-# Deploy Preview context:
-# All deploys generated from a pull/merge request
-# will inherit these settings.
-[context.deploy-preview.environment]
-  ACCESS_TOKEN = "not so secret"
+[context.deploy-preview]
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
-# Branch deploy context:
-# All deploys that are not from a pull/merge request
-# or from the production branch will inherit these settings.
 [context.branch-deploy]
-  command = "make staging"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
-# Specific branch context:
-# Deploys from this branch will take these settings
-# and override their current ones.
-[context.feature]
-  command = "make feature"
+[[headers]]
+  for = "*.webmanifest"
+  [headers.values]
+    Content-Type = "application/manifest+json; charset=UTF-8"
 
-[context."features/branch"]
-  command = "gulp"
+[[headers]]
+  for = "index.xml"
+  [headers.values]
+    Content-Type = "application/rss+xml"
