--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   publish = "public"
   command = "hugo"
-
 [context.production.environment]
-  HUGO_VERSION = "0.30.2"
+  HUGO_VERSION = "0.57.2"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.57.2"
